# evm-bridge-contracts

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.cicd/: defaults.json
.github/workflows/: build.yaml
antelope_contracts/: CMakeLists.txt
antelope_contracts/contracts/: CMakeLists.txt
antelope_contracts/contracts/deposit_proxy/: CMakeLists.txt  README.txt
antelope_contracts/contracts/deposit_proxy/include/: deposit_proxy.hpp
antelope_contracts/contracts/deposit_proxy/src/: deposit_proxy.cpp
antelope_contracts/contracts/eosio.boot/: eosio.boot.abi  eosio.boot.wasm
antelope_contracts/contracts/erc20/: CMakeLists.txt
antelope_contracts/contracts/erc20/include/erc20/: eosio.token.hpp  erc20.hpp  evm_runtime.hpp  hex.hpp  types.hpp
antelope_contracts/contracts/erc20/include/erc2o/: erc2o.hpp
antelope_contracts/contracts/erc20/ricardian/: erc2o.contracts.md
antelope_contracts/contracts/erc20/src/: erc20.cpp  erc2o.cpp
antelope_contracts/contracts/evmutil/: CMakeLists.txt
antelope_contracts/contracts/evmutil/include/evmutil/: endrmng.hpp  eosio.token.hpp  evmutil.hpp  hex.hpp  poolreg.hpp  tables.hpp  types.hpp
antelope_contracts/contracts/evmutil/src/: evmutil.cpp
antelope_contracts/contracts/stubs/: CMakeLists.txt  stub_endrmng.cpp  stub_evm_runtime.cpp  stub_poolreg.cpp
antelope_contracts/tests/: CMakeLists.txt
antelope_contracts/tests/erc20/: CMakeLists.txt  contracts.hpp.in  different_gas_token_tests.cpp  erc20_tester.cpp  erc20_tester.hpp  erc2o_tester.cpp  integrated_tests.cpp  main.cpp  transfer_tests.cpp
antelope_contracts/tests/evmutil/: CMakeLists.txt  contracts.hpp.in  evmutil_tester.cpp  evmutil_tester.hpp  integrated_tests.cpp
contracts/erc2o/include/erc2o/: hex.hpp  types.hpp
contracts/erc2o/src/: CMakeLists.txt  erc2o.cpp
contracts/erc2o/test/: CMakeLists.txt  contracts.hpp.in  erc2o_tester.hpp  main.cpp  transfer_tests.cpp
contracts/erc2o/test/stubs/: CMakeLists.txt  stub_evm_runtime.cpp
include/: erc2o.hpp
solidity/: CMakeLists.txt
solidity/erc2o/: contract.sol  proxy.sol
solidity_contracts/: CMakeLists.txt
solidity_contracts/compile_tools/: CMakeLists.txt  bytecode_header_template.hpp.in  compile_solidity_contract.sh  solcjs_json_input_template.json.in
solidity_contracts/erc20/: CMakeLists.txt  compile_command.sh  contract.sol  evm2native.sol  header_template.hpp.in  proxy.sol  solcinput.json.in
solidity_contracts/evmutil/: CMakeLists.txt  claim_reward_helper.sol  reward_helper.sol  stake_helper.sol  stakehelper.sol  sync_reward_helper.sol
solidity_contracts/utils/: CMakeLists.txt  XBTC.sol
src/: CMakeLists.txt  erc2o.cpp
test/: CMakeLists.txt  contracts.hpp.in  erc2o_tester.cpp  erc2o_tester.hpp  main.cpp
