include(ExternalProject)

ExternalProject_Add(
   contracts
   SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/contracts/
   BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/contracts/
   CMAKE_ARGS -DCMAKE_TOOLCHAIN_FILE=${CDT_ROOT}/lib/cmake/cdt/CDTWasmToolchain.cmake -DCMAKE_BUILD_TYPE=Release -DEXTERNAL_DIR=${EXTERNAL_DIR} -DSOLIDITY_BYTECODES_DIR=${SOLIDITY_BYTECODES_DIR}
   UPDATE_COMMAND ""
   PATCH_COMMAND ""
   TEST_COMMAND ""
   INSTALL_COMMAND ""
   BUILD_ALWAYS 1
   DEPENDS GenerateAllBytecode
)

set(ANTELOPE_CONTRACTS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/contracts )
set(ANTELOPE_CONTRACTS_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/contracts )
add_subdirectory (tests)
